--- a/PC/html/new/menu1_1.html
+++ b/PC/html/new/menu1_1.html
@@ -840,25 +840,15 @@
                     });
                 </script>
                 <!-- lnb -->
-<div class="lnb">
-    <ul>
-        <li><a href="/ht/help/sosCounselMain">FAQ 통합검색</a></li>
-        <li><a href="/ht/help/sosCounselMain">SOS상담</a></li>
-                        <li><a>공지/문의</a>
+                <!-- 201228 S : 작업부분 -->
+                <div class="lnb">
+                    <ul>
+                        <li><a href="/ht/help/sosCounselMain">SOS상담</a></li>
+                        <li><a>공지사항</a>
                             <ul class="depth2">
                                 <li><a href="/ht/help/listNotice">공지사항</a></li>
                                 <li><a href="/ht/help/eventPrizeList">이벤트 당첨자</a></li>
-                                <li><a href="/ht/help/vendorInquiry">상품입점문의</a></li>
-                                <li><a href="/ht/help/businessBuy">대량구매상담</a></li>
-                            </ul>
-                        </li>
-                        <li><a>서비스안내</a>
-                            <ul class="depth2">
-                                <li><a href="/ht/help/memberShip">통합 멤버십</a></li>
-                                <li><a href="/ht/help/savePointByOffBill">영수증 적립 서비스</a></li>
-                                <li><a href="/ht/help/carvingService">각인 서비스</a></li>
-                                <li><a href="/ht/help/packingService">포장 서비스</a></li>
-                                <li><a href="/ht/help/cardInfo">제휴/할인 카드</a></li>
+                               
                             </ul>
                         </li>
                         <li><a>주문 FAQ</a>
@@ -877,15 +867,30 @@
                                 <li><a href="/ht/help/faqListC0404">이벤트</a></li>
                             </ul>
                         </li>
+                        <li><a>문의사항</a>
+                            <ul class="depth2">
+                                <li><a href="/ht/help/vendorInquiry">상품입점문의</a></li>
+                                <li><a href="/ht/help/businessBuy">대량구매상담</a></li>
+                            </ul>
+                        </li>
+                        <li><a>서비스안내</a>
+                            <ul class="depth2">
+                                <li><a href="/ht/help/memberShip">통합 멤버십</a></li>
+                                <li><a href="/ht/help/savePointByOffBill">영수증 적립 서비스</a></li>
+                                <li><a href="/ht/help/carvingService">각인 서비스</a></li>
+                                <li><a href="/ht/help/packingService">포장 서비스</a></li>
+                                <li><a href="/ht/help/cardInfo">제휴/할인 카드</a></li>
+                            </ul>
+                        </li>
                         <li><a>기타 FAQ</a>
                             <ul class="depth2">
                                 <li><a href="/ht/help/faqListC0411">영업점</a></li>
-                                <li><a href="/ht/help/faqListC0412">사이트이용/장애</a></li>
-                                <li><a href="/ht/help/faqListC0413">기타</a></li>
+                                <li><a href="/ht/help/faqListC0412">사이트이용/장애/기타</a></li>
                             </ul>
                         </li>
                     </ul>
                 </div>
+                <!-- // 201228 E : 작업부분 -->
                 <!-- //lnb -->
 
                 <!-- sub contents -->
