--- a/PC/html/new/menu3_5.html
+++ b/PC/html/new/menu3_5.html
@@ -690,64 +690,67 @@ jQuery(function($){
 });
 </script>
 <!-- lnb -->
-<div class="lnb">
-    <ul>
-        <li><a href="/ht/help/sosCounselMain">SOS상담</a></li>
-        <li><a>공지/문의</a>
-            <ul class="depth2">
-                <li><a href="/ht/help/listNotice">공지사항</a></li>
-                <li><a href="/ht/help/eventPrizeList">이벤트 당첨자</a></li>
-                <li><a href="/ht/help/vendorInquiry">상품입점문의</a></li>
-                <li><a href="/ht/help/businessBuy">대량구매상담</a></li>
-            </ul>
-        </li>
-        <li><a>서비스안내</a>
-            <ul class="depth2">
-                <li><a href="/ht/help/memberShip">통합 멤버십</a></li>
-                <li><a href="/ht/help/savePointByOffBill">영수증 적립 서비스</a></li>
-                <li><a href="/ht/help/carvingService">각인 서비스</a></li>
-                <li><a href="/ht/help/packingService">포장 서비스</a></li>
-                <li><a href="/ht/help/cardInfo">제휴/할인 카드</a></li>
-            </ul>
-        </li>
-        <li><a>주문 FAQ</a>
-            <ul class="depth2">
-                <li><a href="/ht/help/faqListC0391">주문결제</a></li>
-                <li><a href="/ht/help/faqListC0392">배송</a></li>
-                <li><a href="/ht/help/faqListC0393">반품/교환/환불</a></li>
-                <li><a href="/ht/help/faqListC0394">세금계산서/증빙</a></li>
-            </ul>
-        </li>
-        <li><a>회원 FAQ</a>
-            <ul class="depth2">
-                <li><a href="/ht/help/faqListC0401">회원정보</a></li>
-                <li><a href="/ht/help/faqListC0402">통합포인트/예치금/쿠폰</a></li>
-                <li><a href="/ht/help/faqListC0403">상품문의</a></li>
-                <li><a href="/ht/help/faqListC0404">이벤트</a></li>
-            </ul>
-        </li>
-        <li><a>기타 FAQ</a>
-            <ul class="depth2">
-                <li><a href="/ht/help/faqListC0411">영업점</a></li>
-                <li><a href="/ht/help/faqListC0412">사이트이용/장애</a></li>
-                <li><a href="/ht/help/faqListC0413">기타</a></li>
-            </ul>
-        </li>
-    </ul>
-</div>
-<!-- //lnb -->
-
+            <!-- 201228 S : 작업부분 -->
+            <div class="lnb">
+                <ul>
+                    <li><a href="/ht/help/sosCounselMain">SOS상담</a></li>
+                    <li><a>공지사항</a>
+                        <ul class="depth2">
+                            <li><a href="/ht/help/listNotice">공지사항</a></li>
+                            <li><a href="/ht/help/eventPrizeList">이벤트 당첨자</a></li>
+                        </ul>
+                    </li>
+                    <li><a>주문 FAQ</a>
+                        <ul class="depth2">
+                            <li><a href="/ht/help/faqListC0391">주문결제</a></li>
+                            <li><a href="/ht/help/faqListC0392">배송</a></li>
+                            <li><a href="/ht/help/faqListC0393">반품/교환/환불</a></li>
+                            <li><a href="/ht/help/faqListC0394">세금계산서/증빙</a></li>
+                        </ul>
+                    </li>
+                    <li><a>회원 FAQ</a>
+                        <ul class="depth2">
+                            <li><a href="/ht/help/faqListC0401">회원정보</a></li>
+                            <li><a href="/ht/help/faqListC0402">통합포인트/예치금/쿠폰</a></li>
+                            <li><a href="/ht/help/faqListC0403">상품문의</a></li>
+                            <li><a href="/ht/help/faqListC0404">이벤트</a></li>
+                        </ul>
+                    </li>
+                    <li><a>문의사항</a>
+                        <ul class="depth2">
+                            <li><a href="/ht/help/vendorInquiry">상품입점문의</a></li>
+                            <li><a href="/ht/help/businessBuy">대량구매상담</a></li>
+                        </ul>
+                    </li>
+                    <li><a>서비스안내</a>
+                        <ul class="depth2">
+                            <li><a href="/ht/help/memberShip">통합 멤버십</a></li>
+                            <li><a href="/ht/help/savePointByOffBill">영수증 적립 서비스</a></li>
+                            <li><a href="/ht/help/carvingService">각인 서비스</a></li>
+                            <li><a href="/ht/help/packingService">포장 서비스</a></li>
+                            <li><a href="/ht/help/cardInfo">제휴/할인 카드</a></li>
+                        </ul>
+                    </li>
+                    <li><a>기타 FAQ</a>
+                        <ul class="depth2">
+                            <li><a href="/ht/help/faqListC0411">영업점</a></li>
+                            <li><a href="/ht/help/faqListC0412">사이트이용/장애/기타</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- // 201228 E : 작업부분 -->
+            <!-- //lnb -->
 <!-- sub contents -->
 <div class="sub_contents">
     <div class="cardinfo_wrap">
         <h3 class="page_title">제휴/할인카드</h3>
         <ul class="list_type02">
-            <li>핫트랙스의 또 다른 혜택</li>
-            <li>추가적립 &amp; 할인과 다양한 무이자 할부 혜택!</li>
+            <li>핫트랙스의 또 다른 혜택 추가적립 &amp; 할인과 다양한 무이자 할부 혜택!</li>
             <li>핫트랙스 온라인몰의 제휴/할인 카드 혜택으로 저렴하게 구매하세요.</li>
         </ul>
         <h4 class="tit01">교보문고 핫트랙스 롯데카드</h4>
-        <table class="table03">
+        <table class="table03 fz13">
             <caption>교보문고 핫트랙스 롯데카드</caption>
             <colgroup>
                 <col width="33%" />
