--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -811,7 +811,7 @@ th.row-headers-background {
             201222 작업부분  <br>
 
             201222 S : 작업부분 <br>
-            // 201222 E : 작업부분 <br></td>
+            // 201222 E : 작업부분 <br>
         </td>
       </tr>
         <tr>
@@ -920,6 +920,297 @@ th.row-headers-background {
         <td class="s24" dir="ltr">완료</td>
         <td class="s20"></td>
         <td class="s25"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+       <td class="s14"></td>
+        <td class="s15" dir="ltr" colspan="9">
+        주석 <br>
+            201228 작업부분  <br>
+
+            201228 S : 작업부분 <br>
+            // 201228 E : 작업부분 <br>
+
+            <strong style="color:red">고객센터 부분은 따로 퍼블 작업되어있는 퍼블부분 확인 불가능으로
+            운영 소스 전부 긁어다가 경로만 바꿔서 적용 하여 로딩되는 시간이 깁니다. <br> 주석부분만 확인 하여 적용 요청</strong>
+        </td>
+      </tr>
+        <tr>
+            <th class="row-headers-background"></th>
+            <td class="s11" colspan="12"></td>
+        </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
+        <td class="s14"></td>
+        <td class="s15" dir="ltr" rowspan="22">고객센터</td>
+        <td class="s16">고객센터</td>
+        <td class="s16" dir="ltr"></td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu0.html">./html/new/menu0.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr">SOS상담</td>
+        <td class="s16"></td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_1.html">./html/new/menu1_1.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr" rowspan="2">공지사항</td>
+        <td class="s16">공지사항</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu2_1.html">./html/new/menu2_1.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">이벤트 당첨자</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu2_2.html">./html/new/menu2_2.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr" rowspan="4">주문 FAQ</td>
+        <td class="s16">주문결제</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu3_1.html">./html/new/menu3_1.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">배송</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu3_2.html">./html/new/menu3_2.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">반품/교환/환불</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu3_3.html">./html/new/menu3_3.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">세금계산서/증빙</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu3_4.html">./html/new/menu3_4.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr" rowspan="4">회원 FAQ</td>
+        <td class="s16">회원정보</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu4_1.html">./html/new/menu4_1.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">통합포인트/예치금/쿠폰</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu4_2.html">./html/new/menu4_2.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">상품문의</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu4_3.html">./html/new/menu4_3.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">이벤트</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu4_4.html">./html/new/menu4_4.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr" rowspan="3">문의사항 </td>
+        <td class="s16">상품입점문의</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu5_1.html">./html/new/menu5_1.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">대량구매상담</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu5_2.html">./html/new/menu5_2.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16">대량구매상담 팝업</td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">대량구매상담 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popupBulkList.html">./html/new/popupBulkList.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr" rowspan="5">서비스안내</td>
+        <td class="s16">통합 멤버십</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu6_1.html">./html/new/menu6_1.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">영수증 적립 서비스</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu6_2.html">./html/new/menu6_2.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">각인 서비스</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu6_3.html">./html/new/menu6_3.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">포장 서비스</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu6_4.html">./html/new/menu6_4.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">제휴/할인 카드</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu6_5.html">./html/new/menu6_5.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr" rowspan="2">기타 FAQ</td>
+        <td class="s16">영업점</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu7_1.html">./html/new/menu7_1.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16">사이트이용/장애/기타</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu7_2.html">./html/new/menu7_2.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
       </tr>
     </tbody>
   </table>
